# kafka-to-parquet

./: README.md  pyproject.toml
kafka_to_parquet/: __init__.py  _impl.py
